tools/zellij/src/zellij-utils/src/kdl/snapshots/zellij_utils__kdl__bare_config_from_default_assets_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
expression: fake_config_stringified
---
keybinds clear-defaults=true {
    shared {
        bind "Ctrl q" { Detach; }
    }
}
plugins {
    about location="zellij:about"
    compact-bar location="zellij:compact-bar"
    configuration location="zellij:configuration"
    filepicker location="zellij:strider" {
        cwd "/"
    }
    plugin-manager location="zellij:plugin-manager"
    session-manager location="zellij:session-manager"
    status-bar location="zellij:status-bar"
    strider location="zellij:strider"
    tab-bar location="zellij:tab-bar"
    welcome-screen location="zellij:session-manager" {
        welcome_screen true
    }
}
load_plugins {
    zellij:link
}
web_client {
    font "monospace"
}
mouse_mode false
pane_frames false
session_serialization true
serialize_pane_viewport true
scrollback_lines_to_serialize 0
serialization_interval 30
show_startup_tips false
show_release_notes false
advanced_mouse_actions false
mouse_scroll_resize false
mouse_hover_effects false
mouse_hover_tips false
dashboard true
host_scrollback true
session_bar true
nested_session_handling "never"
